add overview image

--- a/trading_strategies.ipynb
+++ b/trading_strategies.ipynb
@@ -849,19 +849,28 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook trading_strategies.ipynb to html\n",
+      "[NbConvertApp] Writing 379871 bytes to trading_strategies.html\n"
+     ]
+    }
+   ],
    "source": [
     "!jupyter nbconvert --to html trading_strategies.ipynb"
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
+     "end_time": "2025-09-28T18:40:56.620645Z",
      "start_time": "2025-09-28T18:40:54.028934500Z"
     }
    },
    "id": "9b115627ad3866d",
-   "execution_count": null
+   "execution_count": 43
   }
  ],
  "metadata": {
